--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,29 @@
+alabaster==0.7.13
+asgiref==3.6.0
+Babel==2.12.1
+certifi==2022.12.7
+charset-normalizer==3.1.0
+crispy-bootstrap5==0.7
 Django==4.1.3
 django-crispy-forms==1.14.0
-crispy-bootstrap5==0.7
-Sphinx==6.1.3
+docutils==0.19
+idna==3.4
+imagesize==1.4.1
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+packaging==23.0
+peewee==3.16.0
 Pillow==9.4.0
-
+psycopg2-binary==2.9.5
+Pygments==2.14.0
+requests==2.28.2
+snowballstemmer==2.2.0
+Sphinx==6.1.3
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+sqlparse==0.4.3
+urllib3==1.26.15
