--- a/requirements.txt
+++ b/requirements.txt
@@ -14,11 +14,14 @@ crispy-bootstrap5==0.7
 cryptography==3.4.8
 dbus-python==1.2.18
 decorator==4.4.2
+defusedxml==0.7.1
 distlib==0.3.6
 distro==1.7.0
 distro-info===1.1build1
 Django==4.1.3
 django-crispy-forms==1.14.0
+django-environ==0.4.4
+django-telegram-login==0.2.3
 docutils==0.19
 filelock==3.10.7
 fire==0.5.0
@@ -75,14 +78,18 @@ pyTelegramBotAPI==4.11.0
 python-apt==2.3.0+ubuntu2
 python-dateutil==2.8.1
 python-docx==0.8.11
+python3-openid==3.2.0
 pytz==2022.7.1
 PyYAML==5.4.1
 raylib==4.2.1.2
 requests==2.28.2
+requests-oauthlib==1.3.1
 SecretStorage==3.3.1
 semver==2.13.0
 six==1.16.0
 snowballstemmer==2.2.0
+social-auth-app-django==2.1.0
+social-auth-core==4.4.1
 soupsieve==2.4
 Sphinx==6.1.3
 sphinxcontrib-applehelp==1.0.4
