--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
-altgraph==0.17.3
-asgiref==3.6.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-cryptography==40.0.2
-defusedxml==0.7.1
-Django==4.2
-idna==3.4
+beautifulsoup4==4.12.2
+chardet==5.1.0
+charset-normalizer==2.1.0
+mouse==0.7.1
+numpy==1.24.3
 oauthlib==3.2.2
-pycparser==2.21
+pdf2docx==0.5.6
+pdf2image==1.16.3
+Pillow==9.2.0
 pyinstaller==5.10.1
 pyinstaller-hooks-contrib==2023.2
-PyJWT==2.6.0
-python3-openid==3.2.0
-requests==2.29.0
+pyTelegramBotAPI==4.11.0
+python-docx==0.8.11
+pytube==12.1.3
+requests==2.28.1
+requests-file==1.5.1
+requests-ftp==0.3.1
 requests-oauthlib==1.3.1
-social-auth-app-django==5.2.0
-social-auth-core==4.4.2
-soupsieve==2.4.1
+simpleline==1.9.0
 sqlparse==0.4.4
-urllib3==1.26.15
+telebot==0.0.5
 whitenoise==6.4.0
+wikipedia==1.4.0
